--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,19 +1,17 @@
 $fonts-size: (
   base: 62.5%, //html
-  global: 1.3rem, //body
+  global: 1.2rem, //body
   h1: 2.4rem,
 );
 
 $fonts-family: (
-  global: 'Roboto',
-  secondary: 'Poppins',
+  global: "Roboto",
+  secondary: "Poppins",
 );
 
-$colors:(
-    blueligth: #1E86FF,
-    bluedark: #334680,
-    bluedark-variant: #282538,
-    gray: #B9BDCF,
+$colors: (
+  primary: #1e86ff,
+  secondary: #334680,
+  third: #282538,
+  complementary: #b9bdcf,
 );
-
-
