--- a/styles/main.css
+++ b/styles/main.css
@@ -58,12 +58,17 @@ html {
 }
 
 body {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-family: "Roboto";
-  color: #334680;
 }
 
 a {
   text-decoration: none;
+}
+
+.wrapper {
+  max-width: 960px;
+  margin: auto;
+  background-color: azure;
 }
 /*# sourceMappingURL=main.css.map */
