--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -2,4 +2,11 @@
   max-width: 960px;
   margin: auto;
   background-color: azure;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+
+  .main {
+    flex-grow: 1;
+  }
 }
