--- a/styles/main.css
+++ b/styles/main.css
@@ -60,15 +60,108 @@ html {
 body {
   font-size: 1.2rem;
   font-family: "Roboto";
+  color: #1e86ff;
 }
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 .wrapper {
   max-width: 960px;
   margin: auto;
   background-color: azure;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh;
+}
+
+.wrapper .main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+/* CONTAINER */
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header .brand {
+  padding: 20px;
+}
+
+.header .nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20px;
+}
+
+.header .nav li {
+  position: relative;
+}
+
+.header .nav a {
+  font-size: 1.2rem;
+  padding: 0 20px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  color: black;
+}
+
+.header .nav a:hover {
+  color: red;
+}
+
+.header .nav li.is-active a {
+  color: green;
+  font-weight: bold;
+  cursor: default;
+}
+
+.header .nav li.is-active::after {
+  content: "";
+  position: absolute;
+  left: 25%;
+  bottom: -5px;
+  width: 50%;
+  height: 2px;
+  background-color: black;
+  border-radius: 20px;
+}
+
+@media (min-width: 0px) and (max-width: 430px) {
+  .header {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .header .nav a {
+    padding: 0 10px;
+  }
+}
+
+.footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 20px;
 }
 /*# sourceMappingURL=main.css.map */
