--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -4,7 +4,7 @@
   background-color: azure;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 
   .main {
     flex-grow: 1;
